# final-project

./: .gitignore  CLAUDE.md  LICENSE  ONDE_ESTA_TUDO.md  README.md  REPOSITORY_ANALYSIS.md  STATUS.md  USAGE.md  tmp
.claude/: settings.json
.dvc/: config
baseline/: dvc.yaml  dvc_baseline_experiment.py  dvc_preprocessing.py  dvc_run_quality_check.py  dvc_sampling.py  example_ml_usage.py  generate_dataset.py  requirements.txt
data/: .gitignore  attack_ips.json
docs/: ARCHITECTURE.md  KNOWLEDGE_GAPS.md  SESSION_CONTEXT.md  reading-plan.md
experiments/: campaign-plan.md  methodology.md
experiments/teda-high-dim/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
experiments/teda-high-dim/experiments/: exp01_dimensional_sweep.py  exp02_ablation_study.py  exp03_generate_figures.py  exp03_regime_transition.py  exp03_statistical_analysis.py  experiment-guide.md  generate_paper_figures.py  run_all.py
experiments/teda-high-dim/results/: README.md  exp02_statistical_tests.txt  exp03_statistical_tests.txt
experiments/teda-high-dim/src/teda_hd/: __init__.py
experiments/teda-high-dim/src/teda_hd/algorithms/: __init__.py  base.py  corrected.py  original.py  variants.py
experiments/teda-high-dim/src/teda_hd/generators/: __init__.py  gaussian.py
experiments/teda-high-dim/src/teda_hd/metrics/: __init__.py  detection.py  regime.py
experiments/teda-high-dim/tests/: test_forgetting.py  test_gaussian_generator.py  test_original_variance.py  test_regime_metrics.py  test_welford_variance.py
fase1/: artigo_completo_metodologia.md  cronograma_fase1_detalhado.md  (+1 more)
(+1570 files in other folders)
